--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-  <a href="/reversed.html">working web inspector</a>
+  <a href="/reversed.html">broken web inspector</a>
 </body>
 </html>
