--- a/reversed.html
+++ b/reversed.html
@@ -6,6 +6,6 @@
 </head>
 
 <body class="reversed">
-  <a href="/">broken web inspector</a>
+  <a href="/">working web inspector</a>
 </body>
 </html>
